src/snapshots/http_dragonfly__config__test__wrong_config.snap
---
source: src/config.rs
expression: "AppConfig::new(&String::from(path.to_str().unwrap()), &ctx)"
input_file: tests/configs/wrong/01-minimal.yaml
---
Err(
    unable to parse config: invalid type: found unit, expected a sequence,
)
