src/snapshots/http_dragonfly__config__test__wrong_config@02-not-unique-target-ids.yaml.snap
---
source: src/config.rs
expression: "AppConfig::owned(&String::from(path.to_str().unwrap()), &ctx)"
input_file: tests/configs/wrong/02-not-unique-target-ids.yaml
---
Err(
    invalid config: all target IDs of the listener should be unique,
)
