src/snapshots/http_dragonfly__config__test__wrong_config@08-without-listeners.yaml.snap
---
source: src/config.rs
expression: "AppConfig::owned(&String::from(path.to_str().unwrap()), &ctx)"
input_file: tests/configs/wrong/08-without-listeners.yaml
---
Err(
    invalid config: at least one listener must be configured,
)
