src/snapshots/http_dragonfly__config__test__wrong_config@21-wrong-target_id.yaml.snap
---
source: src/config.rs
expression: "AppConfig::owned(&String::from(path.to_str().unwrap()), &ctx)"
input_file: tests/configs/wrong/21-wrong-target_id.yaml
---
Err(
    invalid config: `target_selector` points to unknown target_id `google-2`,
)
