src/snapshots/http_dragonfly__config__test__wrong_config@40-strategy-ok_then_target_id.yaml.snap
---
source: src/config.rs
expression: "AppConfig::owned(&String::from(path.to_str().unwrap()), &ctx)"
input_file: tests/configs/wrong/40-strategy-ok_then_target_id.yaml
---
Err(
    invalid config: `target_selector` should be specified for strategy `ok_then_target_id`,
)
