src/snapshots/http_dragonfly__config__test__wrong_config@91-double-default.yaml.snap
---
source: src/config.rs
expression: "AppConfig::owned(&String::from(path.to_str().unwrap()), &ctx)"
input_file: tests/configs/wrong/91-double-default.yaml
---
Err(
    invalid config: more than one default target is defined but only one is allowed,
)
