src/snapshots/http_dragonfly__config__test__wrong_config@92-no-all-conditions.yaml.snap
---
source: src/config.rs
expression: "AppConfig::owned(&String::from(path.to_str().unwrap()), &ctx)"
input_file: tests/configs/wrong/92-no-all-conditions.yaml
---
Err(
    invalid config: all targets must have condition defined because strategy is `conditional_routing`,
)
